--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "^0.74.5",
+    "react-native-element-dropdown": "^2.12.2",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-modal-dropdown": "^1.0.2",
     "react-native-pager-view": "6.3.0",
+    "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-vector-icons": "^10.2.0"
   },
