--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "react-native": "0.76.2",
     "react-native-element-dropdown": "^2.12.2",
     "react-native-gesture-handler": "~2.20.2",
-    "react-native-modal-dropdown": "^1.0.2",
     "react-native-pager-view": "6.5.1",
     "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "~3.16.1",
@@ -30,8 +29,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "^18.3.12",
-    "@types/react-native": "^0.73.0"
+    "@types/react": "^18.3.12"
   },
   "private": true
 }
