--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "@react-navigation/native": "^7.0.0",
     "@react-navigation/native-stack": "^7.0.0",
     "@react-navigation/stack": "^7.0.0",
-    "expo": "^52.0.9",
+    "expo": "~52.0.18",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
-    "react-native": "0.76.2",
+    "react-native": "^0.76.5",
     "react-native-element-dropdown": "^2.12.2",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-pager-view": "6.5.1",
@@ -29,7 +29,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "^18.3.12"
+    "@types/react": "^18.3.12",
+    "expo-cli": "^6.3.10"
   },
   "private": true
 }
