--- a/package.json
+++ b/package.json
@@ -19,18 +19,18 @@
     "expo": "~52.0.18",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
-    "react-native": "^0.76.5",
+    "react-native": "0.76.5",
     "react-native-element-dropdown": "^2.12.2",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-pager-view": "6.5.1",
     "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "~3.16.1",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "expo-font": "~13.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "^18.3.12",
-    "expo-cli": "^6.3.10"
+    "@types/react": "^18.3.12"
   },
   "private": true
 }
